# pytorrents-csv

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/pytorrents_csv/: pytorrents_csv.py  responsetypes.py
