[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorrents-csv"
version = "2.0.2"
authors = [
  { name="mazer", email="contact@m3r.one" },
]

description = "a python cli client for torrents-csv"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
 "certifi==2026.4.22",
 "charset-normalizer==3.4.7",
 "idna==3.13",
 "requests==2.33.1",
 "urllib3==2.7.0",
]

[project.urls]
"Homepage" = "https://github.com/m3rone/pytorrents-csv"
"Bug Tracker" = "https://github.com/m3rone/pytorrents-csv/issues"

[project.scripts]
pytorrents-csv = "pytorrents_csv.pytorrents_csv:main"
